test/files/semantic/reject/var_redef_local.neo
func f()
    let x: int = 10
    let x: float = 0.0
end
